--- a/Untitled/Untitled.tex
+++ b/Untitled/Untitled.tex
@@ -1,275 +1,310 @@
-\documentclass[preprint, 3p,
-authoryear]{elsarticle} %review=doublespace preprint=single 5p=2 column
-%%% Begin My package additions %%%%%%%%%%%%%%%%%%%
-
-\usepackage[hyphens]{url}
-
-  \journal{An awesome journal} % Sets Journal name
-
-\usepackage{graphicx}
-%%%%%%%%%%%%%%%% end my additions to header
-
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
-\usepackage{amssymb,amsmath}
-% TODO: Currently lineno needs to be loaded after amsmath because of conflict
-% https://github.com/latex-lineno/lineno/issues/5
-\usepackage{lineno} % add
-\usepackage{ifxetex,ifluatex}
-\usepackage{fixltx2e} % provides \textsubscript
-% use upquote if available, for straight quotes in verbatim environments
-\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+%
+\documentclass[
+]{article}
+\usepackage{amsmath,amssymb}
+\usepackage{iftex}
+\ifPDFTeX
+  \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-\else % if luatex or xelatex
-  \usepackage{fontspec}
-  \ifxetex
-    \usepackage{xltxtra,xunicode}
-  \fi
-  \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
-  \newcommand{\euro}{€}
+  \usepackage{textcomp} % provide euro and other symbols
+\else % if luatex or xetex
+  \usepackage{unicode-math} % this also loads fontspec
+  \defaultfontfeatures{Scale=MatchLowercase}
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
-% use microtype if available
-\IfFileExists{microtype.sty}{\usepackage{microtype}}{}
-\usepackage[]{natbib}
-\bibliographystyle{elsarticle-harv}
-
-\ifxetex
-  \usepackage[setpagesize=false, % page size defined by xetex
-              unicode=false, % unicode breaks when used with xetex
-              xetex]{hyperref}
-\else
-  \usepackage[unicode=true]{hyperref}
+\usepackage{lmodern}
+\ifPDFTeX\else
+  % xetex/luatex font selection
 \fi
-\hypersetup{breaklinks=true,
-            bookmarks=true,
-            pdfauthor={},
-            pdftitle={Short Paper},
-            colorlinks=false,
-            urlcolor=blue,
-            linkcolor=magenta,
-            pdfborder={0 0 0}}
-
-\setcounter{secnumdepth}{5}
-% Pandoc toggle for numbering sections (defaults to be off)
-
-% Pandoc syntax highlighting
-\usepackage{color}
-\usepackage{fancyvrb}
-\newcommand{\VerbBar}{|}
-\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
-\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
-% Add ',fontsize=\small' for more characters per line
-\usepackage{framed}
-\definecolor{shadecolor}{RGB}{248,248,248}
-\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
-\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
-\newcommand{\ExtensionTok}[1]{#1}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\NormalTok}[1]{#1}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\RegionMarkerTok}[1]{#1}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-
-% tightlist command for lists without linebreak
+% Use upquote if available, for straight quotes in verbatim environments
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+\IfFileExists{microtype.sty}{% use microtype if available
+  \usepackage[]{microtype}
+  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+}{}
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+  \IfFileExists{parskip.sty}{%
+    \usepackage{parskip}
+  }{% else
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% if KOMA class
+  \KOMAoptions{parskip=half}}
+\makeatother
+\usepackage{xcolor}
+\usepackage[margin=1in]{geometry}
+\usepackage{graphicx}
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+% Set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
+\setlength{\emergencystretch}{3em} % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+\ifLuaTeX
+  \usepackage{selnolig}  % disable illegal ligatures
+\fi
+\usepackage{bookmark}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\urlstyle{same}
+\hypersetup{
+  pdftitle={RESIDÊNCIA E MOVIMENTAÇÃO: HÁ ALGUM PADRÃO PARA PEIXES EM RIACHO DE CABECEIRA?},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
 
-% From pandoc table feature
-\usepackage{longtable,booktabs,array}
-\usepackage{calc} % for calculating minipage widths
-% Correct order of tables after \paragraph or \subparagraph
-\usepackage{etoolbox}
-\makeatletter
-\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
-\makeatother
-% Allow footnotes in longtable head/foot
-\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}
-\makesavenoteenv{longtable}
-
-
-
-
-
+\title{RESIDÊNCIA E MOVIMENTAÇÃO: HÁ ALGUM PADRÃO PARA PEIXES EM RIACHO
+DE CABECEIRA?}
+\author{true \and true \and true \and true}
+\date{}
 
 \begin{document}
+\maketitle
 
+\textbf{Resumo}
 
-\begin{frontmatter}
+Estudos em riachos que investigam padrões de movimentação de peixes são
+escassos e apresentam lacunas. As taxas de recaptura são baixas e os
+potenciais fatores causadores são: baixa eficiência da captura,
+mortalidade dos indivíduos marcados, alta mobilidade e perda de marcas.
+O estudo objetivou investigar a comunidade de peixes em um arroio
+estreito e de baixa vazão para aumentar a eficácia da captura, em escala
+temporal e espacial menor para compreender os movimentos. O estudo
+ocorreu nas corredeiras de um tributário do rio Paranhana, parte
+superior da bacia do Rio dos Sinos no Município de Igrejinha,
+totalizando 540m investigados. Os peixes foram coletados com pesca
+elétrica, anestesiados com solução de Eugenol e marcados com VIFE. Em
+cada evento, uma marca específica foi aplicada. Foram marcados 520
+indivíduos com comprimento total maior que 5 cm, e recapturados com
+marca 131 (25,2\%). Sendo 21,2\% recapturados no local da marcação,
+1,3\% em corredeiras a jusante e 2,7\% a montante. As espécies com maior
+quantidade de indivíduos recapturados foram C\emph{haracidium
+pterostictum} e \emph{Heptapterus mustelinu}s. Os movimentos de \emph{C.
+pterostictum} a montante ocorreram significativamente mais
+frequentemente do que a jusante do ponto de marcação (chi2=5,4;
+p=0,001). O padrão das recapturas indicou um comportamento parcialmente
+residente na corredeira da marcação. Um indivíduo de \emph{H.
+mustelinus} apresentou 4 marcas consecutivas. As marcações se
+distribuíram uniformemente durante as campanhas, demonstrando a eficácia
+do método. Os 75\% não recapturados podem ter se dispersado de forma
+ativa, ou fora do local do estudo. O padrão é semelhante a outros
+estudos, demonstrando que uma parte da comunidade é parcialmente
+residente e outra altamente móvel.
 
-  \title{Short Paper}
-    \author[Laboratório de Ictiologia - Universidade Federal do Rio
-Grande FURG]{Amanda Letícia Bauer%
-  \corref{cor1}%
-  \fnref{1}}
-   \ead{amandaleticiabauer@hotmail.com} 
-    \author[Laboratório de Ecologia de Peixes - Universidade do Vale do
-Rio dos Sinos UNISINOS]{Gabriela Buzlarf%
-  %
-  }
-   \ead{bob@example.com} 
-    \author[Another University]{Kelly Correia de Lima%
-  %
-  \fnref{2}}
-   \ead{cat@example.com} 
-    \author[Laboratório de Ecologia de Peixes - Universidade do Vale do
-Rio dos Sinos UNISINOS]{Derek Zoolander%
-  %
-  \fnref{2}}
-   \ead{derek@example.com} 
-      \affiliation[Some Institute of Technology]{
-    organization={Big Wig University},addressline={1 main
-street},city={Gotham},postcode={123456},state={State},country={United
-States},}
-    \affiliation[Another University]{
-    organization={Department},addressline={A street
-29},city={Manchester,},postcode={2054 NX},country={The Netherlands},}
-    \cortext[cor1]{Corresponding author}
-    \fntext[1]{This is the first author footnote.}
-    \fntext[2]{Another author footnote.}
-  
-  \begin{abstract}
-  This is the abstract.
+Palavras chaves: - Marcação - Recaptura - \emph{C. pterostictum} -
+\emph{H. mustelinus}
 
-  It consists of two paragraphs.
-  \end{abstract}
-    \begin{keyword}
-    keyword1 \sep 
-    keyword2
-  \end{keyword}
-  
- \end{frontmatter}
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-library(tinytex) Please make sure that your manuscript follows the
-guidelines in the Guide for Authors of the relevant journal. It is not
-necessary to typeset your manuscript in exactly the same way as an
-article, unless you are submitting to a camera-ready copy (CRC) journal.
+\textbf{INTRODUÇÃO}
 
-For detailed instructions regarding the elsevier article class, see
-\url{https://www.elsevier.com/authors/policies-and-guidelines/latex-instructions}
+A dinâmica de dispersão é caracterizada pelo movimento dos indivíduos
+para longe do local de origem (LIDICKER e STENSETH, 1992) e é um fator
+determinante para entender a dinâmica populacional, o comportamento, a
+genética e a evolução das espécies (MCMAHON e MATTER, 2006), sendo
+fundamental para compreensão das funções das populações (TILMAN et al.,
+1997). A compreensão destes processos é essencial para a conservação dos
+ecossistemas aquáticos (LUCAS e BARRAS, 2001). O movimento pode estar
+relacionado com os estágios ontogenéticos como reprodução (HENRIQUES et
+al., 2010) refúgio e evasão a predação (ROBERTS e ANGERMEIER, 2007). Os
+distúrbios e pressões antropogênicas podem afetar ou impulsionar a
+dispersão (SHUKLA E BHAT, 2018). Os movimentos podem ser de curta ou
+longa distância. Os curtos são relativos a alterações nas condições
+abióticas e disponibilidade de recursos (ALBANESE et al., 2004) enquanto
+os de longa distância são relativos à reprodução e colonização
+(HENRIQUES et al., 2010). A maioria dos estudos avaliam a migração de
+peixes e são desenvolvidas em ambientes temperados e com peixes de
+grande porte e com valor comercial (KENNEDY et al., 2013). Mesmo
+apresentando um alto valor ecológico, peixes de pequeno porte e com
+menor valor econômico são pouco estudadas (CAROLSFELD et al., 2003). A
+migração mais extrema conhecida e documentada até então, é realizada
+pela Brachyplatystoma rousseauxii, que desova no extremo oeste da
+Amazônia e apresenta um ciclo migratório de aproximadamente 11.600 km
+(BARTHEM et al., 2017). Em riachos, a movimentação dos peixes vem sendo
+investigada e documentada, porém ainda apresenta lacunas. Thompson
+(1933) calculou constantes de migração para espécies de peixes,
+percebendo movimentos aleatórios. Posteriormente Gerking (1950) buscava
+respostas sobre a estabilidade de populações em córregos no verão, e
+anos depois, propôs o ``paradigma dos movimentos restritos'' (PMR)
+(1959), determinando que a maioria das espécies de riachos são
+sedentárias. Estudos mais recentes apontam que comunidades são compostas
+tanto de indivíduos sedentários, quanto móveis (MAZZONI et al., 2018). A
+maneira com que os peixes se movem nos riachos também influencia na
+estrutura e na função das redes alimentares (WINEMILLER e JEPSEN, 1998).
+Fausch et al.~(2002) explica que a dinâmica do movimento, resiliência,
+ou troca de habitat pode ser difícil de se mensurar, uma vez que a
+escala temporal no qual um organismo percebe seu ambiente nem sempre é
+aparente para os pesquisadores. Riachos apresentam ambientes sequenciais
+de corredeira (águas rasas, rápidas e ambiente rochoso) e poço (água
+lenta com substrato fino) (TERESA E CASSATI, 2012). A complexidade e as
+características geomorfológicas e hidrológicas do riacho influenciam
+diretamente a composição funcional dos peixes (TERESA et al., 2015). Em
+corredeiras, as espécies tipicamente encontradas são aquelas associadas
+ao substrato, como Heptapterus sp., Rineloricaria sp., 3 Trichomycterus
+sp. e Hemiancistrus sp. Em termos de abundância, a família Loricariidae
+é que melhor caracteriza a ictiofauna de corredeiras (BECKER, 2002).
+Estudos que investigam padrões de movimentação em riachos de cabeceira
+são ainda menores, devido à dificuldade de realizar ensaios de marcação
+e recaptura e ainda por apresentarem alta rotatividade de espécies
+(BARBOSA, 2019). Além disso, as taxas de recaptura são baixas, como no
+trabalho de Barbosa (2019), resultando uma média de 10\% de recaptura
+dos indivíduos marcados. Em estudos abrangentes utilizando diversas
+espécies, as taxas de recapturas variam entre 4,7\% (dados não
+publicados) até 35\% (Mazzoni et al., 2018). Estes valores baixos podem
+ser causados por quatro fatores: a) Mortalidade alta dos indivíduos
+causado pelo manejo (handling) durante a captura e marcação; b) Perda de
+marcas; c) Eficiência baixa do método de captura; d) Alta mobilidade dos
+indivíduos, que leva a dispersão para fora da área de amostragem; As
+possibilidades a e b foram testadas no laboratório (Leal et al., 2012,
+Brennan et al., 2006). Os resultados destas publicações mostram, que com
+o manejo apropriado durante a captura e marcação a taxa de mortalidade é
+aproximadamente zero. Quanto a persistência das marcas, a durabilidade e
+fragmentação depende do local aplicado e da espécie estudada. Nos
+estudos, as marcas ficaram visíveis por mais de 70 dias, comprovando a
+eficácia do método em curto prazo. Nesse contexto, o objetivo do
+presente trabalho é executar ensaios de marcação e recaptura de peixes
+em um riacho de cabeceira na zona de corredeira para compreender os
+movimentos, em escala temporal e espacial menores para buscar
+compreender a eficácia do método de amostragem.
 
-\section{Bibliography styles}\label{bibliography-styles}
+\subsection{Referências
+Bibliográficas}\label{referuxeancias-bibliogruxe1ficas}
 
-Here are two sample references: \citep{Feynman1963118, Dirac1953888}.
+Albanese, B., Angermeier, P.L. \& Dorai-Raj, S., 2004. Ecological
+correlates of fish movement in a network of Virginia streams. Canadian
+Journal of Fisheries and Aquatic Sciences 61: 857- 869
 
-By default, natbib will be used with the \texttt{authoryear} style, set
-in \texttt{classoption} variable in YAML and with
-\texttt{elsearticle-harv.bst} which is among provided style by
-\texttt{elsarticle} documentclass. Other available style are
-\texttt{elsarticle-num.bst} and \texttt{elsarticle-num-names.bst} ---
-the first one can be used for the numbered scheme, second one for
-numbered with new options of natbib.sty.
+BARBOSA, Amanda. Efeito da estrutura de riachos de cabeceiras sobre a
+organização da comunidade de peixes. 2019. 80 f.~Tese (Doutorado em
+Biologia) - Programa de Pós-Graduação Biologia, Universidade do Vale do
+Rio dos Sinos (UNISINOS), São Leopoldo, 2019.
 
-You can sets extra options with \texttt{natbiboptions} variable in YAML
-header. Example
+BARTHEM, Ronaldo B. et al.~Goliath catfish spawning in the far western
+Amazon confirmed by the distribution of mature adults, drifting larvae
+and migrating juveniles. Scientific reports, v. 7, n.~1, p.~1-13, 2017.
+13
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\FunctionTok{natbiboptions}\KeywordTok{:}\AttributeTok{ longnamesfirst,angle,semicolon}
-\end{Highlighting}
-\end{Shaded}
+BECKER, Fernando Gertum. Distribuição e abundância de peixes de
+corredeiras e suas relações com características de hábitat local, bacia
+de drenagem e posição espacial em riachos de Mata Atlântica (bacia do
+rio Maquiné, RS, Brasil. 2002.
 
-There are various more specific bibliography styles available at
-\url{https://support.stmdocs.in/wiki/index.php?title=Model-wise_bibliographic_style_files}.
-To use one of these, add it in the header using, for example,
-\texttt{biblio-style:\ model1-num-names}.
+BOWER, Luke M. et al.~Effects of hydrology on fish diversity and
+assemblage structure in a Texan coastal plains river. Transactions of
+the American Fisheries Society, v. 148, n.~1, p.~207-218, 2019.
 
-\subsection{Using CSL}\label{using-csl}
+BRENNAN, Nathan P.; LEBER, Kenneth M.; BLACKBURN, Brett R. Use of
+codedwire and visible implant elastomer tags for marine stock
+enhancement with juvenile red snapper Lutjanus campechanus. Fisheries
+Research, v. 83, n.~1, p.~90-97, 2007.
 
-If \texttt{citation\_package} is set to \texttt{default} in
-\texttt{elsevier\_article()}, then pandoc is used for citations instead
-of \texttt{natbib}. In this case, the \texttt{csl} option is used to
-format the references. Alternative \texttt{csl} files are available from
-\url{https://www.zotero.org/styles?q=elsevier}. These can be downloaded
-and stored locally, or the url can be used as in the example header.
+BUCKUP, P. A. et al.~Waterfall climging in Characidium (Crenuchidae:
+Characidiinae) from eastern Brazil. Ichthyological Exploration of
+Freshwaters, v. 11, n.~3, p.~273-278, 2000.
 
-\section{Equations}\label{equations}
+CAROLSFELD, Joachim et al.~Migratory fishes of South America. World
+Fisheries Trust: Victoria, BC, Canada, 2003.
 
-Here is an equation: \[ 
-  f_{X}(x) = \left(\frac{\alpha}{\beta}\right)
-  \left(\frac{x}{\beta}\right)^{\alpha-1}
-  e^{-\left(\frac{x}{\beta}\right)^{\alpha}}; 
-  \alpha,\beta,x > 0 .
-\]
+FAUSCH, Kurt D. et al.~Landscapes to riverscapes: bridging the gap
+between research and conservation of stream fishes: a continuous view of
+the river is needed to understand how processes interacting among scales
+set the context for stream fishes and their habitat. BioScience, v. 52,
+n.~6, p.~483-498, 2002.
 
-Here is another: \begin{align}
-  a^2+b^2=c^2.
-\end{align}
+Gerking, S. D. (1950). Stability of a stream fish population. The
+Journal of Wildlife Management, 14(2), 193-202. Gerking, S. D. (1959).
+The restricted movement of fish populations. Biological reviews, 34(2),
+221-242.
 
-Inline equations: \(\sum_{i = 2}^\infty\{\alpha_i^\beta\}\)
+GOWAN, Charles; FAUSCH, Kurt D. Why do foraging stream salmonids move
+during summer?. Environmental Biology of Fishes, v. 64, n.~1-3,
+p.~139-153, 2002. Gowan, C., Young, M. K., Fausch, K. D., \& Riley, S.
+C. (1994). Restricted movement in resident stream salmonids: a paradigm
+lost?. Canadian Journal of Fisheries and Aquatic Sciences, 51(11),
+2626-2637.
 
-\section{Figures and tables}\label{figures-and-tables}
+Henriques, R., Sousa, V., \& Coelho, M. M., 2010. Migration patterns
+counteract seasonal isolation of Squalius torgalensis, a critically
+endangered freshwater fish inhabiting a typical Circum-Mediterranean
+small drainage. Conservation Genetics 11:1859-1870. 14
 
-Figure \ref{fig2} is generated using an R chunk.
+JONSSON, Bror; JONSSON, Nina. Partial migration: niche shift versus
+sexual maturation in fishes. Reviews in Fish Biology and Fisheries, v.
+3, n.~4, p.~348-365, 1993.
 
-\begin{figure}
-
-{\centering \includegraphics[width=0.5\linewidth]{Untitled_files/figure-latex/fig2-1} 
-
-}
-
-\caption{\label{fig2}A meaningless scatterplot.}\label{fig:fig2}
-\end{figure}
-
-\section{Tables coming from R}\label{tables-coming-from-r}
-
-Tables can also be generated using R chunks, as shown in Table
-\ref{tab1} for example.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{knitr}\SpecialCharTok{::}\FunctionTok{kable}\NormalTok{(}\FunctionTok{head}\NormalTok{(mtcars)[,}\DecValTok{1}\SpecialCharTok{:}\DecValTok{4}\NormalTok{], }
-    \AttributeTok{caption =} \StringTok{"}\SpecialCharTok{\textbackslash{}\textbackslash{}}\StringTok{label\{tab1\}Caption centered above table"}
-\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{longtable}[]{@{}lrrrr@{}}
-\caption{\label{tab1}Caption centered above table}\tabularnewline
-\toprule\noalign{}
-& mpg & cyl & disp & hp \\
-\midrule\noalign{}
-\endfirsthead
-\toprule\noalign{}
-& mpg & cyl & disp & hp \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-Mazda RX4 & 21.0 & 6 & 160 & 110 \\
-Mazda RX4 Wag & 21.0 & 6 & 160 & 110 \\
-Datsun 710 & 22.8 & 4 & 108 & 93 \\
-Hornet 4 Drive & 21.4 & 6 & 258 & 110 \\
-Hornet Sportabout & 18.7 & 8 & 360 & 175 \\
-Valiant & 18.1 & 6 & 225 & 105 \\
-\end{longtable}
-
-\renewcommand\refname{References}
-\bibliography{mybibfile.bib}
-
+Krebs, Charles J. Ecological Methodology. 1999. KENNEDY, R. J. et
+al.~Upstream migratory behaviour of wild and ranched Atlantic salmon
+Salmo salar at a natural obstacle in a coastal spate river. Journal of
+fish biology, v. 83, n.~3, p.~515-530, 2013 KNAEPKENS, G.; BAEKELANDT,
+K.; EENS, M. Assessment of the movement behaviour of the bullhead
+(Cottus gobio), an endangered European freshwater fish. Animal Biology,
+v. 55, n.~3, p.~219-226, 2005. Langerhans, R. B., \& Reznick, D. N.,
+2010. Ecology and evolution of swimming performance in fishes:
+predicting evolution with biomechanics. Fish locomotion: an
+eco-ethological perspective 220:248. LARENTIS, Crislei et al.~Fauna de
+peixes em riachos: avaliação das intervenções antrópicas sobre os
+atributos e estrutura funcional das assembleias. 2015. LEAL, Mateus
+Evangelista; BARBOSA, Amanda Saldanha; SCHULZ, Uwe Horst. Uso de
+Implante Visual Fluorescente de Elastômero (VIFE) na marcação de
+pequenos peixes de água doce tropicais. Biotemas, v. 25, n.~3,
+p.~311-315, 2012. LIDICKER, W. Z.; STENSETH, N. C. To disperse or not to
+disperse: who does it and why?. In: Animal dispersal. Springer,
+Dordrecht, 1992. p.~21-36. Lucas, M. C., \& Baras, E. (2001). Migration
+of freshwater fishes.Blackwell Science. LUCENA, C. A. S. et al.~O uso de
+óleo de cravo na eutanásia de peixes. Boletim Sociedade Brasileira de
+Ictiologia, v. 105, p.~20-24, 2013. Mazzoni, R., Pinto, M. P.,
+Iglesias-Rios, R., \& Costa, R., 2018. Fish movement in an Atlantic
+Forest stream. Neotropical Ichthyology 16. MAZZONI, R.; MENDONÇA, R. S.;
+CARAMASCHI, E. P. Reproductive biology of Astyanax janeiroensis
+(Osteichthyes, Characidae) from the Ubatiba River, Maricá, RJ, Brazil.
+Brazilian Journal of Biology, v. 65, n.~4, p.~643-649, 2005. McMahon, T.
+E., \& Matter, W. J., 2006. Linking habitat selection, emigration and
+population dynamics of freshwater fishes: a synthesis of ideas and
+approaches. Ecology of Freshwater Fish 15:200-210. Radinger, J., \&
+Wolter, C., 2014. Patterns and predictors of fish dispersal in rivers.
+Fish and fisheries 15:456-473. 15 Roberts, J. H., \& Angermeier, P. L.,
+2007. Movement responses of stream fishes to introduced corridors of
+complex cover. Transactions of the American Fisheries Society
+136:971-978. RODRÍGUEZ, Marco A. Restricted movement in stream fish: the
+paradigm is incomplete, not lost. Ecology, v. 83, n.~1, p.~1-13, 2002.
+Schlosser IJ, Angermeier PL (1995) Spatial variation in demographic
+processes of lotic fishes: conceptual models, empirical evidence and
+implications for conservation. Am Fish Symp No 17:392--401 Schulz, U.
+H., Nabinger, V., \& Gomes, L. P. (2006). Relatório Final do Projeto
+Monalisa. São Leopoldo, RS. Comitê de gerenciamento da bacia do Rio dos
+SinosCOMITESINOS, 18p Shukla, R., \& Bhat, A. (2018). Nestedness
+patterns and dispersal dynamics in tropical central Indian stream fish
+metacommunities. Freshwater Science, 37(1), 147-158. SILVA, Raquel Costa
+da. Movimento longitudinal de peixes: uma análise cienciométrica,
+manutenção de comunidades e implicação na colonização de um riacho
+costeiro. 2013. TERESA, Fabrício B.; CASATTI, Lilian. Influence of
+forest cover and mesohabitat types on functional and taxonomic diversity
+of fish communities in Neotropical lowland streams. Ecology of
+Freshwater Fish, v. 21, n.~3, p.~433-442, 2012. THIEM, Jason D. et
+al.~Hypoxic conditions interrupt flood‐response movements of three
+lowland river fish species: Implications for flow restoration in
+modified landscapes. Ecohydrology, v. 13, n.~3, p.~e2197, 2020. TERESA,
+Fabrício Barreto; CASATTI, Lilian; CIANCIARUSO, Marcus Vinicius.
+Functional differentiation between fish assemblages from forested and
+deforested streams. Neotropical Ichthyology, n.~ahead, p.~00-00, 2015.
+Thompson, D. H. (1933). The migration of Illinois fishes. Biological
+notes; no. 001. Tilman, D., Lehman, C. L., \& Kareiva, P. (1997).
+Population dynamics in spatial habitats. Spatial ecology: The role of
+space in population dynamics and interspecific interactions, 3-20.
+Winemiller, K. O., \& Jepsen, D. B. (1998). Effects of seasonality and
+fish movement on tropical river food webs. Journal of fish Biology, 53,
+267-296
 
 \end{document}
